small description changes

--- a/index.html
+++ b/index.html
@@ -448,15 +448,18 @@
             </p>
             <div class="experience-body">
                 <p class="experience-text">
-                    I completed two semester-long full-time internships and one semester of part-time work as a Software Developer. My responsibilities
-                    in this position included updating and developing touch screen display interfaces for the building, creating tools for faculty on our website,
-                    resolving web-related tickets for staff, and managing equipment reservations.
+                    I completed two semester-long full-time internships and one semester of part-time work as a
+                    Software Developer at RIT Saunders College of Business. My responsibilities
+                    in this position included updating and developing touch screen display interfaces for the building,
+                    creating tools for faculty on our website, resolving web-related tickets for staff, and managing
+                    equipment reservations.
                     <br><br>
-                    This role provided me with exposure to a diverse set of languages, tools, and frameworks, such as PHP, HTML, CSS, JavaScript, AJAX calls,
-                    SQL, DataTables, and CodeIgniter 4, among others.
+                    This role provided me with exposure to a diverse set of languages, tools, and frameworks, such as
+                    PHP, HTML, CSS, JavaScript, AJAX calls, SQL, DataTables, and CodeIgniter 4, among others.
                     <br><br>
-                    This position also presented me with the opportunity to collaborate with faculty members in a professional environment, ensuring that the
-                    products I developed were user-friendly and aligned with user requirements. This experience not only honed my technical skills but also
+                    This position also presented me with the opportunity to collaborate with faculty members in a
+                    professional environment, ensuring that the products I developed were user-friendly and aligned
+                    with user requirements. This experience not only honed my technical skills but also
                     enhanced my interpersonal abilities.
                 </p>
             </div>
@@ -472,7 +475,7 @@
                 <p class="experience-text">
                     During the summer of 2023, I had the opportunity to work as an intern at Visual Alpha, a SaaS
                     Fintech startup based in Tokyo, Japan specializing in investment management services.
-                    During this period, my primary focus was on restructuring the back-end code of their document
+                    During my time with Visual Alpha, my primary focus was on restructuring the back-end code of their document
                     parsing software. This software was one of their many tools, and was responsible for reading imported files, computing crucial
                     investment metrics, and caching information as needed. It operated within a Node.js
                     environment, utilizing JavaScript and Typescript, while relying on AWS S3 for caching
