contact me page formatted but not functional, gray box for footer with no content in it

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     :root {
         --links-color: #ffffff;
     }
+    @media (max-device-width : 768px) {
+        html,body { display: none; }
+        .media-warning {
+            display: block;
+        }
+    }
     body {
         margin: 0;
     }
@@ -15,6 +21,9 @@
         position: absolute;
         top: 0;
         height: 100vh;
+        width: 99vw;
+        max-width: 100%;
+        max-height: 100%;
         background-image: url("assets/smith-rock.jpg");
         background-size: cover;
         background-repeat: no-repeat;
@@ -83,7 +92,7 @@
     }
     .navbar-title {
         font-size: 4.5vh;
-        margin-left: 15%;
+        margin-left: 13%;
         font-weight: 600;
         white-space: nowrap;
     }
@@ -346,17 +355,72 @@
         margin-left: 1vw;
         margin-right: 1vw;
     }
+    .contact-container {
+        position: relative;
+        height: 50vh;
+        width: 60vw;
+        margin-left: 20vw;
+        margin-right: 20vw;
+        margin-top: 4vh;
+        box-shadow: 0 4px 10px 6px rgba(0, 0, 0, .2);
+        min-height: 550px;
+    }
 
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    label {
+        display: block;
+        font-weight: bold;
+        margin-left: 4vw;
+        font-family: "Century Gothic", serif;
+        font-size: 2vh;
+    }
+
+    input[type="text"],
+    input[type="email"],
+    textarea {
+        width: 50vw;
+        margin-left: 4vw;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+    button[type="submit"] {
+        background-color: #007bff;
+        font-family: "Century Gothic", serif;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
+        border-radius: 4px;
+        margin-left: 45%;
+        margin-top: 4vh;
+    }
+
+    button[type="submit"]:hover {
+        background-color: #0056b3;
+    }
+    .footer {
+        position: relative;
+        width: 100%;
+        height: 14vh;
+        background: #f6f6f6;
+        margin-top: 9vh;
+    }
 </style>
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
 <body>
 <header class="navbar" id="navbar">
     <div class="navbar-title" id="navbar-title">Eligh Ros</div>
     <ul class="navbar-links">
-        <li><a onclick="window.scrollTo({top: window.screenTop, left: 0, behavior: 'smooth',});">Home</a></li>
+        <li><a onclick="window.scrollTo({top: 0, left: 0, behavior: 'smooth',});">Home</a></li>
         <li><a onclick="window.scrollTo({top: .92 * window.innerHeight, left: 0, behavior: 'smooth',});">Education</a></li>
         <li><a onclick="window.scrollTo({top: 2 * (.91 * window.innerHeight), left: 0, behavior: 'smooth',});">Work Experience</a></li>
         <li><a onclick="window.scrollTo({top: 3 * (.907 * window.innerHeight), left: 0, behavior: 'smooth',});">Projects</a></li>
@@ -368,8 +432,6 @@
         <div class="darken">
         </div>
     </div>
-
-
 </div>
 <div class="headshot"></div>
 <div class="bio">Hello! I'm Eligh Ros, a passionate computer scientist and software developer based in Phoenix,
@@ -440,9 +502,9 @@
     <p class="head">Work Experience</p>
     <div class="experience-flex">
         <div class="experience-child">
-            <p class="experience-head">Saunders College of Business</p>
+            <p class="experience-head">RIT Saunders</p>
             <p class="experience-sub-head">
-                Web Operations Software Developer from January 2023 to May 2024
+                Web Operations Software Dev from January 2023 to May 2024
                 <br>
                 Rochester, New York
             </p>
@@ -541,7 +603,29 @@
 </div>
 <div class="contact-section">
     <p class="head">Contact Me</p>
+    <div class="contact-container">
+        <br><br>
+        <form action="#" method="POST" id="contact-form">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+            </div><br>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+    <footer class="footer"></footer>
 </div>
+
 </body>
 
 <script>
@@ -572,4 +656,11 @@
             navbar_links.classList.remove("solid");
         }
     }
+
+    window.onload = function () {
+        if (window.innerWidth <= 768) {
+            document.write('This website is not formatted for mobile viewing, to use this website please transfer to a computer');
+        }
+    }
+
 </script>
